initial generic search
