# swagger_server/swagger/swagger.yaml
@@ -20,7 +20,7 @@ tags:
 - name: Info
   description: Endpoints for describing search capabilities and options
 - name: Search
-  description: Generic search on indexes
+  description: Search on index
 paths:
   /indexes:
     get:
@@ -63,6 +63,33 @@ paths:
               schema:
                 $ref: '#/components/schemas/searchAttributes'
       x-openapi-router-controller: swagger_server.controllers.info_controller
+  /search:
+    post:
+      tags:
+      - Search
+      summary: Generic search on one or all available indexes
+      description: Returns result hits with associated fields and values
+      operationId: generic_search
+      parameters:
+      - in: query
+        name: index_name
+        required: true
+        schema:
+          type: string
+      - in: query
+        name: search_query
+        required: true
+        schema:
+          type: string
+      responses:
+        200:
+          description: Successfully retrieved search result
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/search_data'
+      x-openapi-router-controller: swagger_server.controllers.search_controller
+
 components:
   schemas:
     indexes:
@@ -187,6 +214,30 @@ components:
         attrib_name: attrib_name
         attrib_type: date
         info: info
+    search_data:
+      type: "object"
+      properties:
+        index-schema-description:
+          $ref: '#/components/schemas/index-schema-description'
+        search_result:
+          type: array
+          items:
+            type: object
+            properties:
+              title:
+                type: string
+                description: Descriptive title for search result
+              url_link:
+                type: string
+                description: Resolvable https link to result data location
+              content_text:
+                type: string
+                description: Bag of attribute-value  metadata pairs attached to search hit
+
+          example:
+            title: descriptive title
+            url_link: https://hostname.com/path/to/data
+            content_text: "attribute_1:value_1,attribute_2:value_2,..."
   securitySchemes:
     BearerAuth:
       type: http
